# lab7

./: .gitignore  CMakeLists.txt  main.cpp  moving_rectangle.cpp  moving_rectangle.h  rectangle.cpp  rectangle.h
